fixed.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Ubuntu, Helvetica Neue, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
}


body {
    background-color: whitesmoke;
}

.content {
    border: 1px solid black;
    box-shadow: 0 0 1 rgba(0, 0, 0, 0.5);
}

/* CSS STYLING FOR THE BLACK BOX WITH THE INSTAGRAM LOGO IS */
.head-head.with-padding-top {
    padding: 50px;
}

.social--container {
    background-color: black;
    height: 38px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
}

.head__menu {
    display: flex;
    align-items: center;
    list-style: none;
    margin: 0;
    padding: 0;
}

.head__item {
    padding: 0 1rem;
    width: 100%;
}

.head__links {
    position: relative;
    color: white;
    display: block;
    align-items: center;
    justify-content: flex-start;
    text-decoration: none;
    left: 0;
}

.head__links::after {
    content: '';
    position: absolute;
    left: 0;
    bottom: -6px;
    width: 100%;
    height: 3px;
    background: white;
    border-radius: 5px;
    transform: scaleX(0);
    transition: all 0.3s ease;
}

.head__links:hover::after {
    transform: scaleX(1);
}

/* CSS STYLING FOR THE FOOTER SECTION */
.footer__container {
    background-color: black;
    padding: .5rem 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    box-shadow: 0 0 1 rgba(0, 0, 0, .5);
}


.footer__links {
    width: 100%;
    max-width: 1000px;
    display: flex;
    justify-content: center;
}

.footer__link--wrapper {
    display: flex;
}

.footer__link--items {
    display: flex;
    flex-direction: column;
    align-items: flex-start; /* makes it start from the left side */
    margin: 16px;
    text-align: left;
    width: 160px;
    box-sizing: border-box;
    font-size: .8rem;
}

.footer__link--items p {
    margin-bottom: 12px;
    font-size: .8rem;
}

.footer__link > h2 {
    color: white;
}

.footer__link--items a {
    color: white;
    text-decoration: none;
    margin-bottom: 0.5rem;
}

.footer__link--items a:hover {
    color: whitesmoke;
    transition: 0.3s ease-out;
}

.social__icon--link {
    color: white;
    font-size: 18px;
    align-items: center;
    margin: 0 auto;
}

.social__media {
    max-width: 1000px;
    width: 100%;
}

.social__media--wrap {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
    max-width: 1000px;
    margin: 40px auto 0 auto;
}

.social__icons {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 240px;
}

.website__rights {
    color: white;
    font-size: .75rem;
}

@media screen and (max-width: 820px) {
    .footer__links {
        padding-top: 2rem;
    }

    #footer__logo {
        margin-bottom: 2rem;
    }

    .website__rights {
        margin-bottom: 2rem;
    }

    .footer__link--items {
        font-size: .75rem;
    }

    .footer__container {
        font-size: .8rem;
    }
}

@media screen and (max-width: 760px) {
    .footer__link--wrapper {
        flex-direction: column;
    }

    .social__media--wrap {
        flex-direction: column;
    }
}

@media screen and (max-width: 480px) {
    .footer__link--items {
        margin: 0;
        padding: 10px;
        width: 100%;
    }
}

/* #footer__logo {
    color: white;
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 1.25rem;
    padding-bottom: 50px;
} */

/* THE PINK KIKI ARTS LOGO IN THE FOOTER */
#logo {
    border-radius: 50%;
    width: 100px;
    height: auto;
    cursor: pointer;
    margin-bottom: 50px;
}

.footer__link--items label {
    display: block;
    margin-bottom: 8px;
    font-weight: bold;
}

.footer__link--items [type="text"], input[type="email"] {
    width: 100%;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-bottom: 16px;
}

.footer__link--items [type="submit"] {
    width: 100%;
    padding: 8px;
    background-color: lightpink;
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

.footer__link--items [type="submit"]:hover {
    background-color: pink;
}


/* CSS STYLING FOR THE THREE BARS TO CREATE THE X FOR THE ANNOUNCEMENT BAR */
.close-bar .bar{
    width: 20px;
    height: 3px;
    margin: 5px auto;
    background: white;
}

.close-bar .bar {
    display: block;
    cursor: pointer;
}

#close-bar {
    position: absolute;
    z-index: 1001;
    top: 20%;
    right: 5%;
}

#close-bar .bar:nth-child(2) {
    background-color: transparent;
}

#close-bar .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
}

#close-bar .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
}

/* CSS STYLING FOR THE NAVBAR */
.navbar {
    display: flex;
    background-color: transparent;
    height: 45px;
    justify-content: center;
    align-items: center;
    font-size: .85rem;
    width: 100%;
    box-shadow: 0 0 1 rgba(0, 0, 0, 0.5);
}

.navbar__menu {
    display: flex;
    align-items: center;
    list-style: none;
    text-align: center;
}

.navbar__container {
    display: flex;
    justify-content: flex-start;
    height: 45px;
    z-index: 1;
    width: 100%;
    max-width: 1300px;
    margin: 0 auto;
    padding: 0 10px;
}

.navbar__item {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 1rem;
    width: 100%;
}

.navbar__links {
    position: relative;
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
    /* text-decoration: none; */
}

.navbar__links:hover {
    text-decoration: none;
}

sup {
    position: absolute;
    left: -10px;
    top: -4px;
    font-size: .85rem;
}

@media screen and (max-width:600px) {
    .navbar {
        font-size: .75rem;
    }

    sup {
        font-size: .75rem;
    }
}

